--- a/index.html
+++ b/index.html
@@ -1686,7 +1686,7 @@ jQuery(function($) {
             </li>
             <li>
               <div class="icon-fallback-text">
-                <span class="icon icon-dk"></span>
+                <span class="icon icon-dankort"></span>
                 <span class="fallback-text">DK</span>
               </div>
             </li>
@@ -1881,7 +1881,7 @@ jQuery(function($) {
   &lt;/li&gt;
   &lt;li&gt;
     &lt;div class="icon-fallback-text"&gt;
-      &lt;span class="icon icon-dk"&gt;&lt;/span&gt;
+      &lt;span class="icon icon-dankort"&gt;&lt;/span&gt;
       &lt;span class="fallback-text"&gt;DK&lt;/span&gt;
     &lt;/div&gt;
   &lt;/li&gt;
