Added grid and list view icons to demo

--- a/index.html
+++ b/index.html
@@ -1766,6 +1766,18 @@ jQuery('body').on('ajaxCart.afterCartLoad', function(evt, cart) {
             </li>
             <li>
               <div class="icon-fallback-text">
+                <span class="icon icon-grid-view"></span>
+                <span class="fallback-text">Grid View</span>
+              </div>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
+                <span class="icon icon-list-view"></span>
+                <span class="fallback-text">List View</span>
+              </div>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
                 <span class="icon icon-x"></span>
                 <span class="fallback-text">X</span>
               </div>
@@ -1949,6 +1961,18 @@ jQuery('body').on('ajaxCart.afterCartLoad', function(evt, cart) {
     &lt;div class="icon-fallback-text"&gt;
       &lt;span class="icon icon-arrow-down"&gt;&lt;/span&gt;
       &lt;span class="fallback-text"&gt;Arrow Down&lt;/span&gt;
+    &lt;/div&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-grid-view"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Grid View&lt;/span&gt;
+    &lt;/div&gt;
+  &lt;/li&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-list-view"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;List View&lt;/span&gt;
     &lt;/div&gt;
   &lt;/li&gt;
   &lt;li&gt;
