Minor copy updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Shopify Theme Development Framework - Timber
 description: Timber is a theme framework for Shopify that helps you get your store up and running quickly. It provides all required theme templates, a starter set of liquid tags, and some basic styles and modules for you to extend on.
 canonical: /timber
-version: v2.0.2
+version: v2.1.0
 ---
 
 <!-- gh-pages -->
@@ -1209,7 +1209,7 @@ jQuery('body').on('ajaxCart.afterCartLoad', function(evt, cart) {
         <h2 class="doc-title js-title" id="drawers"><strong>4.2 </strong>Drawers</h2>
         <p class="docs-text">Mobile-friendly navigation and the ajax cart are displayed in drawers. All drawer JS is included in <strong class="docs-strong">timber.js.liquid</strong>.</p>
         <p class="docs-text">Drawers can be opened by clicking on elements with class <code>js-drawer-open-left</code> or <code>js-drawer-open-right</code>.</p>
-        <p class="docs-text">Drawers are initialized in a global JS variable `timber.LeftDrawer` or `timber.RightDrawer`. You can use `timber.RightDrawer.open()` or `timber.RightDrawer.close()` from external JS to show and hide the drawers.</p>
+        <p class="docs-text">Drawers are initialized in a global JS variable <code>timber.LeftDrawer</code> and <code>timber.RightDrawer</code>. You can use <code>timber.RightDrawer.open()</code> or <code>timber.RightDrawer.close()</code> from external JS to show and hide the drawers.</p>
 
         <hr class="hr--docshr">
 
