--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@ Output:
           TAGS
         ===================================== -->
         <h2 class="doc-title module-title" id="tags"><strong>3.2 </strong>Tags</h2>
-        <p class="docs-text--source">Documentation - <a href="http://docs.shopify.com/themes/liquid-variables/article?utm_source=Timber&utm_medium=os" class="docs-link">http://docs.shopify.com/themes/liquid-variables/article</a></p>
+        <p class="docs-text--source">Documentation - <a href="https://docs.shopify.com/themes/liquid-documentation/objects/article?utm_source=Timber&utm_medium=os" class="docs-link">https://docs.shopify.com/themes/liquid-documentation/objects/article</a></p>
         <p class="docs-text">Get an article's tags with a simple <code>for</code> loop. The example below also adds a comma after each tag, unless it's the last one. The code lives in <strong class="docs-strong">snippet/tags-article</strong>.</p>
 
         <div id="tags-example">
