Add Amazon Payment icon. Update readme and gemfile

--- a/index.html
+++ b/index.html
@@ -1560,6 +1560,12 @@ jQuery('body').on('ajaxCart.afterCartLoad', function(evt, cart) {
           <ul class="inline-list icon-font-demo">
             <li>
               <div class="icon-fallback-text">
+                <span class="icon icon-amazon_payments"></span>
+                <span class="fallback-text">Amazon Payments</span>
+              </div>
+            </li>
+            <li>
+              <div class="icon-fallback-text">
                 <span class="icon icon-american_express"></span>
                 <span class="fallback-text">American Express</span>
               </div>
@@ -1765,6 +1771,12 @@ jQuery('body').on('ajaxCart.afterCartLoad', function(evt, cart) {
         <div id="icons-code">
 <pre>
 &lt;ul class="inline-list icon-font-demo"&gt;
+  &lt;li&gt;
+    &lt;div class="icon-fallback-text"&gt;
+      &lt;span class="icon icon-amazon_payments"&gt;&lt;/span&gt;
+      &lt;span class="fallback-text"&gt;Amazon Payments&lt;/span&gt;
+    &lt;/div&gt;
+  &lt;/li&gt;
   &lt;li&gt;
     &lt;div class="icon-fallback-text"&gt;
       &lt;span class="icon icon-american_express"&gt;&lt;/span&gt;
