Fix typos in "Helper Sass Mixins" code

--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@ Clearfix Input:
   @include clearfix();
 }
 
-Ouput:
+Output:
 .foo {
   *zoom: 1; // oldIE
 }
@@ -808,7 +808,7 @@ User-select Input:
 }
 
 Output:
-.foot {
+.foo {
   -webkit-user-select: text;
   -mox-user-select: text;
   -ms-user-select: text;
@@ -821,7 +821,7 @@ Backface Input:
 }
 
 Output:
-.foot {
+.foo {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
